--- a/public/admin/admin_dashboard.html
+++ b/public/admin/admin_dashboard.html
@@ -20,19 +20,9 @@
       margin-top: var(--header-height);
       min-height: calc(100vh - var(--header-height) - var(--footer-height));
     }
-    .dashboard-header {
-      text-align: center;
-      margin-bottom: 15px;
-    }
-    .dashboard-header h1 {
-      font-size: 1.8rem;
-      margin-bottom: 6px;
-      color: #333;
-    }
-    .dashboard-header p {
-      font-size: 0.9rem;
-      color: #555;
-    }
+    .dashboard-header { text-align: center; margin-bottom: 15px; }
+    .dashboard-header h1 { font-size: 1.8rem; margin-bottom: 6px; color: #333; }
+    .dashboard-header p { font-size: 0.9rem; color: #555; }
     .card-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
@@ -48,23 +38,13 @@
       transition: transform 0.2s, box-shadow 0.2s;
       font-size: 0.9rem;
     }
-    .summary-card:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-    }
+    .summary-card:hover { transform: translateY(-3px); box-shadow: 0 6px 12px rgba(0,0,0,0.15); }
     .card-sales { background: linear-gradient(135deg, #007bff, #00c6ff); }
     .card-orders { background: linear-gradient(135deg, #28a745, #85e085); }
     .card-products { background: linear-gradient(135deg, #6f42c1, #a285e6); }
     .card-customers { background: linear-gradient(135deg, #fd7e14, #ff9f59); }
-    .summary-card h3 {
-      margin-bottom: 4px;
-      font-size: 1rem;
-      font-weight: 600;
-    }
-    .summary-card p {
-      font-size: 1.2rem;
-      font-weight: bold;
-    }
+    .summary-card h3 { margin-bottom: 4px; font-size: 1rem; font-weight: 600; }
+    .summary-card p { font-size: 1.2rem; font-weight: bold; }
     .chart-section {
       background: #fff;
       padding: 10px;
@@ -72,12 +52,7 @@
       box-shadow: 0 3px 6px rgba(0,0,0,0.1);
       margin-bottom: 15px;
     }
-    .chart-section h2 {
-      font-size: 1rem;
-      margin-bottom: 8px;
-      text-align: center;
-      color: #333;
-    }
+    .chart-section h2 { font-size: 1rem; margin-bottom: 8px; text-align: center; color: #333; }
     .chart-container { height: 200px; }
     .recent-activity {
       background: #fff;
@@ -85,17 +60,8 @@
       border-radius: 6px;
       box-shadow: 0 3px 6px rgba(0,0,0,0.1);
     }
-    .recent-activity h4 {
-      font-size: 1rem;
-      margin-bottom: 8px;
-      color: #333;
-    }
-    .activity-item {
-      padding: 6px 0;
-      border-bottom: 1px solid #eee;
-      font-size: 0.85rem;
-      color: #333;
-    }
+    .recent-activity h4 { font-size: 1rem; margin-bottom: 8px; color: #333; }
+    .activity-item { padding: 6px 0; border-bottom: 1px solid #eee; font-size: 0.85rem; color: #333; }
     .activity-item:last-child { border-bottom: none; }
   </style>
 </head>
@@ -146,22 +112,33 @@
   <div id="footer-placeholder"></div>
   
   <script>
-    // Load external header
+    // Load external header and attach hamburger event
     fetch('admin_header.html')
       .then(response => response.text())
       .then(html => {
         document.getElementById('header-placeholder').innerHTML = html;
-        // Attach hamburger toggle event now that header is loaded
+        // Attach hamburger toggle for mobile drop-down menu
         const hamburger = document.getElementById("hamburger");
         const mobileNav = document.getElementById("mobileNav");
-        if (hamburger && mobileNav) {
+        // If mobileNav is not found, create it from header content (if needed)
+        if (hamburger) {
+          // If the mobile navigation element isn't already loaded from the header,
+          // you can check and create it here. For this solution, ensure admin_header.html includes it.
           hamburger.addEventListener("click", () => {
-            mobileNav.classList.toggle("open");
+            if(mobileNav) {
+              mobileNav.classList.toggle("open");
+            }
           });
         }
+        // Additionally, click anywhere outside the mobileNav to close it
+        document.addEventListener("click", function(e) {
+          if(mobileNav && !e.target.closest(".admin-header") && !e.target.closest(".mobile-nav")){
+            mobileNav.classList.remove("open");
+          }
+        });
       })
       .catch(err => console.error('Error loading header:', err));
-      
+    
     // Load external footer
     fetch('admin_footer.html')
       .then(response => response.text())
@@ -172,7 +149,7 @@
   </script>
   
   <script>
-    // Initialize Chart.js
+    // Initialize Chart.js for Sales Overview
     document.addEventListener("DOMContentLoaded", function() {
       const ctx = document.getElementById('salesChart').getContext('2d');
       new Chart(ctx, {
